Resolves: tdf#114144 let double click advance to next if 'next' exists

Change-Id: Id05ad8b72e0ec4f9bad2a9cfb780a44a27618d37
Reviewed-on: https://gerrit.libreoffice.org/64701
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>